--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <section id="about">
             <h2>Pourquoi Nous Choisir ?</h2>
             <ul>
-                <li>Experts certifiés et formés aux dernières réglementations :cite[ko]</li>
-                <li>Utilisation d'outils de pointe pour des diagnostics précis :cite[1f]</li>
+                <li>Experts certifiés et formés aux dernières réglementations</li>
+                <li>Utilisation d'outils de pointe pour des diagnostics précis</li>
                 <li>Rapports détaillés et compréhensibles</li>
                 <li>Conseils personnalisés pour l'amélioration énergétique</li>
-                <li>Tarifs compétitifs à partir de 120€ pour un DPE :cite[bx]</li>
+                <li>Tarifs compétitifs à partir de 90€ pour un DPE</li>
             </ul>
         </section>
 
@@ -100,7 +100,7 @@
 
     <footer>
         <p>&copy; 2024 Expert en Diagnostic DPE. Tous droits réservés.</p>
-        <p>Certifié par le Ministère du Logement :cite[aw] | Membre de la Fédération Interprofessionnelle du Diagnostic Immobilier (FIDI)</p>
+        <p>Certifié par le Ministère du Logement | Membre de la Fédération Interprofessionnelle du Diagnostic Immobilier (FIDI)</p>
     </footer>
 
     <script>
