--- a/index.html
+++ b/index.html
@@ -3,115 +3,433 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expert en Diagnostic de Performance Énergétique (DPE)</title>
+    <title>Expert en Diagnostic DPE | Votre Partenaire de Confiance</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        /* Styles existants... */
-        .service-list {
+        :root {
+            --primary-color: #2E7D32;
+            --secondary-color: #4CAF50;
+            --accent-color: #81C784;
+            --text-color: #333;
+            --light-gray: #f5f5f5;
+            --border-radius: 8px;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+        }
+
+        /* Header Styles */
+        .header {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            padding: 1rem 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
+            align-items: center;
         }
-        .service-item {
-            flex-basis: calc(50% - 20px);
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+
+        .logo h1 {
+            font-size: 1.8rem;
+            font-weight: 700;
         }
-        .cta-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #4CAF50;
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
             color: white;
             text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent-color);
+        }
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 100px 20px;
+            text-align: center;
+        }
+
+        .hero h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            max-width: 800px;
+            margin: 0 auto 2rem;
+        }
+
+        /* Services Grid */
+        .services {
+            max-width: 1200px;
+            margin: 4rem auto;
+            padding: 0 20px;
+        }
+
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .service-card {
+            background: white;
+            border-radius: var(--border-radius);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            padding: 2rem;
+            transition: transform 0.3s;
+        }
+
+        .service-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .service-card h3 {
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        /* News Section */
+        .news-section {
+            background: var(--light-gray);
+            padding: 4rem 0;
+        }
+
+        .news-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .news-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .news-card {
+            background: white;
+            border-radius: var(--border-radius);
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .news-content {
+            padding: 1.5rem;
+        }
+
+        /* Contact Form */
+        .contact {
+            max-width: 800px;
+            margin: 4rem auto;
+            padding: 0 20px;
+        }
+
+        .contact form {
+            display: grid;
+            gap: 1rem;
+        }
+
+        .form-group {
+            display: grid;
+            gap: 0.5rem;
+        }
+
+        input, textarea, select {
+            padding: 0.8rem;
+            border: 1px solid #ddd;
+            border-radius: var(--border-radius);
+            font-family: inherit;
+        }
+
+        .btn {
+            background: var(--primary-color);
+            color: white;
+            padding: 1rem 2rem;
+            border: none;
+            border-radius: var(--border-radius);
+            cursor: pointer;
+            font-weight: 500;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background: var(--secondary-color);
+        }
+
+        /* Trust Badges */
+        .trust-badges {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin: 4rem 0;
+            flex-wrap: wrap;
+        }
+
+        .badge {
+            text-align: center;
+            padding: 1rem;
+        }
+
+        .badge i {
+            font-size: 2rem;
+            color: var(--primary-color);
+        }
+
+        /* Footer */
+        footer {
+            background: var(--primary-color);
+            color: white;
+            padding: 4rem 0 2rem;
+        }
+
+        .footer-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+        }
+
+        .footer-section h3 {
+            margin-bottom: 1rem;
+        }
+
+        .footer-section ul {
+            list-style: none;
+        }
+
+        .footer-section ul li {
+            margin-bottom: 0.5rem;
+        }
+
+        .footer-section a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .copyright {
+            text-align: center;
+            margin-top: 2rem;
+            padding-top: 2rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
+        }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+            
+            .hero h2 {
+                font-size: 2rem;
+            }
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1>Expert en Diagnostic de Performance Énergétique (DPE)</h1>
-        <nav>
-            <ul>
-                <li><a href="#services">Nos Services</a></li>
-                <li><a href="#about">À Propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <div class="header-content">
+            <div class="logo">
+                <h1>ExpertDPE</h1>
+            </div>
+            <nav class="nav-links">
+                <a href="#services">Services</a>
+                <a href="#actualites">Actualités</a>
+                <a href="#contact">Contact</a>
+                <a href="#tarifs">Tarifs</a>
+            </nav>
+        </div>
     </header>
 
-    <main>
-        <section id="services">
-            <h2>Nos Services de Diagnostic DPE</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <h3>DPE Résidentiel</h3>
-                    <p>Évaluation précise de la performance énergétique de votre logement, conformément à la réglementation en vigueur. Obtenez votre étiquette énergétique de A à G.</p>
-                    <a href="#contact" class="cta-button">Demander un devis</a>
-                </div>
-                <div class="service-item">
-                    <h3>DPE Tertiaire</h3>
-                    <p>Diagnostic adapté aux bâtiments professionnels et commerciaux. Optimisez votre consommation énergétique et réduisez vos coûts.</p>
-                    <a href="#contact" class="cta-button">Demander un devis</a>
-                </div>
-                <div class="service-item">
-                    <h3>Conseil en Rénovation Énergétique</h3>
-                    <p>Suite à votre DPE, bénéficiez de recommandations personnalisées pour améliorer l'efficacité énergétique de votre bien.</p>
-                    <a href="#contact" class="cta-button">En savoir plus</a>
-                </div>
-                <div class="service-item">
-                    <h3>DPE Location</h3>
-                    <p>Diagnostic obligatoire pour la mise en location de votre bien. Respectez la loi et informez vos locataires.</p>
-                    <a href="#contact" class="cta-button">Réserver maintenant</a>
-                </div>
+    <section class="hero">
+        <h2>Expert en Diagnostic de Performance Énergétique</h2>
+        <p>Des diagnostics précis et professionnels pour votre bien immobilier</p>
+        <a href="#contact" class="btn">Demander un devis gratuit</a>
+    </section>
+
+    <section class="trust-badges">
+        <div class="badge">
+            <i class="fas fa-certificate"></i>
+            <h3>Certifié</h3>
+            <p>Diagnostiqueur agréé</p>
+        </div>
+        <div class="badge">
+            <i class="fas fa-clock"></i>
+            <h3>Rapide</h3>
+            <p>Intervention sous 48h</p>
+        </div>
+        <div class="badge">
+            <i class="fas fa-shield-alt"></i>
+            <h3>Garanti</h3>
+            <p>Assurance professionnelle</p>
+        </div>
+        <div class="badge">
+            <i class="fas fa-euro-sign"></i>
+            <h3>Transparent</h3>
+            <p>Prix sans surprise</p>
+        </div>
+    </section>
+
+    <section id="services" class="services">
+        <h2>Nos Services</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-home"></i>
+                <h3>DPE Vente</h3>
+                <p>Diagnostic obligatoire pour la vente de votre bien. Valable 10 ans.</p>
+                <ul>
+                    <li>Mesure de la performance énergétique</li>
+                    <li>Calcul des émissions de gaz à effet de serre</li>
+                    <li>Recommandations personnalisées</li>
+                </ul>
+                <a href="#contact" class="btn">Demander un devis</a>
             </div>
-        </section>
+            <div class="service-card">
+                <i class="fas fa-key"></i>
+                <h3>DPE Location</h3>
+                <p>Obligatoire pour la mise en location. Protection du locataire.</p>
+                <ul>
+                    <li>Évaluation énergétique complète</li>
+                    <li>Conformité réglementaire</li>
+                    <li>Conseils d'amélioration</li>
+                </ul>
+                <a href="#contact" class="btn">Demander un devis</a>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-building"></i>
+                <h3>DPE Copropriété</h3>
+                <p>Pour les immeubles collectifs. Obligatoire depuis 2024.</p>
+                <ul>
+                    <li>Analyse des parties communes</li>
+                    <li>Bilan énergétique global</li>
+                    <li>Plan d'action collectif</li>
+                </ul>
+                <a href="#contact" class="btn">Demander un devis</a>
+            </div>
+        </div>
+    </section>
 
-        <section id="about">
-            <h2>Pourquoi Nous Choisir ?</h2>
-            <ul>
-                <li>Experts certifiés et formés aux dernières réglementations</li>
-                <li>Utilisation d'outils de pointe pour des diagnostics précis</li>
-                <li>Rapports détaillés et compréhensibles</li>
-                <li>Conseils personnalisés pour l'amélioration énergétique</li>
-                <li>Tarifs compétitifs à partir de 90€ pour un DPE</li>
-            </ul>
-        </section>
+    <section id="actualites" class="news-section">
+        <div class="news-container">
+            <h2>Actualités DPE</h2>
+            <div class="news-grid">
+                <!-- Actualités existantes... -->
+            </div>
+        </div>
+    </section>
 
-        <section id="contact">
-            <h2>Contactez-nous</h2>
-            <form id="contact-form" class="contact-form">
-                <input type="text" name="name" placeholder="Votre nom" required>
-                <input type="email" name="email" placeholder="Votre email" required>
-                <input type="tel" name="phone" placeholder="Votre téléphone" required>
-                <select name="service" required>
+    <section id="contact" class="contact">
+        <h2>Demande de Devis Gratuit</h2>
+        <form id="contact-form">
+            <div class="form-group">
+                <label for="name">Nom complet</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Téléphone</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="service">Type de service</label>
+                <select id="service" name="service" required>
                     <option value="">Choisissez un service</option>
-                    <option value="dpe-residential">DPE Résidentiel</option>
-                    <option value="dpe-commercial">DPE Tertiaire</option>
-                    <option value="renovation-advice">Conseil en Rénovation</option>
-                    <option value="dpe-rental">DPE Location</option>
+                    <option value="dpe-vente">DPE Vente</option>
+                    <option value="dpe-location">DPE Location</option>
+                    <option value="dpe-copropriete">DPE Copropriété</option>
                 </select>
-                <textarea name="message" placeholder="Votre message" required></textarea>
-                <button type="submit">Envoyer</button>
-            </form>
-        </section>
-    </main>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="4"></textarea>
+            </div>
+            <button type="submit" class="btn">Envoyer la demande</button>
+        </form>
+    </section>
 
     <footer>
-        <p>&copy; 2024 Expert en Diagnostic DPE. Tous droits réservés.</p>
-        <p>Certifié par le Ministère du Logement | Membre de la Fédération Interprofessionnelle du Diagnostic Immobilier (FIDI)</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contact</h3>
+                <p>Tél : 01 23 45 67 89</p>
+                <p>Email : contact@expertdpe.fr</p>
+                <p>Adresse : 123 rue du Diagnostic, 75000 Paris</p>
+            </div>
+            <div class="footer-section">
+                <h3>Services</h3>
+                <ul>
+                    <li><a href="#dpe-vente">DPE Vente</a></li>
+                    <li><a href="#dpe-location">DPE Location</a></li>
+                    <li><a href="#dpe-copropriete">DPE Copropriété</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Informations</h3>
+                <ul>
+                    <li><a href="#mentions-legales">Mentions légales</a></li>
+                    <li><a href="#cgv">CGV</a></li>
+                    <li><a href="#politique-confidentialite">Politique de confidentialité</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 ExpertDPE - Tous droits réservés</p>
+        </div>
     </footer>
 
     <script>
-        // Contact form submission
+        // Gestion du formulaire de contact
         document.getElementById('contact-form').addEventListener('submit', function(e) {
             e.preventDefault();
-            // Ici, vous intégreriez l'envoi du formulaire à votre serveur
-            alert('Merci pour votre demande. Nous vous contacterons dans les plus brefs délais pour établir un devis personnalisé.');
+            // Ici, ajoutez votre logique d'envoi de formulaire
+            alert('Merci pour votre demande. Nous vous contacterons dans les plus brefs délais.');
         });
 
-        // Vous pouvez ajouter ici des scripts supplémentaires pour améliorer l'interactivité du site
+        // Animation smooth scroll
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
     </script>
 </body>
 </html>
